# TravelTAF

./: .gitignore  Dockerfile  READMe.md  cookies.txt  db.sqlite3  docker-compose.yml  document_keys.json  firebase-credentials.json  gunicorn_config.py  manage.py  pyproject.toml  start.sh
agent/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
agent/config/: settings.py
agent/migrations/: 0001_initial.py  0002_alter_interaction_options_and_more.py
agent/services/: document_service.py  key_manager.py
authentication/: apps.py  forms.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_delete_customuser.py
authentication/templates/: login.html  password_reset.html  register.html
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogcategory_icon.py  0003_alter_blogpost_slug.py
blog/services/: ai_writer.py
cloud_functions/newsletter/: .env.yaml  deploy.sh  main.py  requirements.txt
core/: sitemaps.py
credits/: add_user_credit.py  admin.py  apps.py  credit_calculator.py  models.py  urls.py  views.py
credits/migrations/: 0001_initial.py  0002_credittransaction_currency_and_more.py  0003_credittransaction_invoice_url_and_more.py  0004_userprofile.py
credits/templates/: balance.html  payment_success.html  purchase.html  (+1 more)
customerSupport/: README.md  __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
dashboard/: urls.py  views.py
faqs/: admin.py  models.py  urls.py  views.py
flights/: README.md  admin.py  models.py
immigrationprograms/: admin.py  apps.py  models.py  urls.py  views.py
main/: admin.py  models.py  urls.py  views.py
news/: admin.py  models.py  urls.py  views.py
promotions/: README.md  admin.py  apps.py  models.py
resume_builder/: forms.py  models.py  urls.py  views.py
scripts/: generate_webhook_token.py
service_offerings/: apps.py  urls.py  views.py
subscribers/: admin.py  forms.py  models.py  urls.py  views.py
subscriptions/: README.md  admin.py  apps.py  models.py  signals.py  urls.py  views.py
templates/: base.html
testimonials/: admin.py  forms.py  models.py  urls.py  views.py
tools/: admin.py  cover_letter.py  forms.py  models.py  urls.py  views.py
travelTAF/: asgi.py  settings.py  urls.py  wsgi.py
utils/: firestore_manager.py  scraping_utils.py
(+221 files in other folders)
