[tool.poetry]
name = "traveltaf"
version = "0.1.0"
description = ""
authors = ["esaatechnology"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-browser-reload = "^1.17.0"
gunicorn = "^23.0.0"
django-cors-headers = "^4.6.0"
whitenoise = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
